# quantum-researcher

./: LICENSE  README.md  pyproject.toml
.github/workflows/: security-review.yml
benchmarks/: search_benchmark.py  search_results.json
quantum_researcher/: __init__.py  __main__.py  api.py  classical_fallback.py  embeddings.py  grover_search.py  oracle.py  quantum_walk.py  researcher.py  sources.py
tests/: test_api.py  test_classical_fallback.py  test_embeddings.py  test_grover.py  test_oracle.py  test_quantum_walk.py  test_researcher.py  test_sources.py
